--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,32 @@
 # API
-/api/.mysql
-/api/sql
+# see /api/.gitignore
 
 # WWW
+# see /www/.gitignore
 
 # COMMON
+# dotenv environment variable files
 .env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
+
+# OS
+.DS_Store
+
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
